syntax = "proto3";
package hyperlane.core.interchain_security.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/core/01_interchain_security/types";

import "google/protobuf/any.proto";

// GenesisState defines the ibc client submodule's genesis state.
message GenesisState {
  // accounts are the accounts present at genesis.
  repeated google.protobuf.Any isms = 1;
}